[project]
name = "CustomD_1gn"
version = "0.0.1"
authors = [{ name = "1gn", email = "me@pk3.zip" }]
description = "A markdown parser for replit.css by hecker40"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sk337/customd"
"Bug Tracker" = "https://github.com/sk337/customd/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
